--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
 </div>
 
 <footer class="footer">
-    <!--<div class="container">-->
-        <p class="text-muted">Copyright &copy; 2013- Osaka Dojima Commodity Exchange.All Right Reserved.</p>
-    <!--</div>-->
+    <p class="text-muted">&copy; 2013- Osaka Dojima Commodity Exchange.All Right Reserved.</p>
 </footer>
 
 <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
