--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </header>
 <div class="panel panel-default">
     <div class="panel-heading">
-        <small id="timestamp"></small>
-        <a href="#collapsePrice" data-toggle="collapse" data-parent="#accordion">相場表</a>
+        <a href="#collapsePrice" data-toggle="collapse" data-parent="#accordion">相場表<small id="timestamp"></small></a>
     </div>
     <ul id="collapsePrice" class="list-group collapse in">
         <li class="list-group-item" datatype="55">東京コメ
