--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="container" id="accordion">
 
 <header>
-    <a href="//ode.or.jp/index.html" target="_pc"><span class="badge btn-success">PCサイト</span></a>
+    <a href="/" target="_pc"><span class="badge btn-success">PCサイト</span></a>
 </header>
 <div class="panel panel-default">
     <div class="panel-heading">
@@ -20,12 +20,12 @@
     </div>
     <ul id="collapsePrice" class="list-group collapse in">
         <li class="list-group-item" datatype="55">東京コメ
-            <a class="btn btn-default btn-xs" href="//ode.or.jp/market/chart_55.html" target="_chart">
+            <a class="btn btn-default btn-xs" href="/market/chart_55.html" target="_chart">
                 <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>チャート
             </a>
         </li>
         <li class="list-group-item" datatype="50">大阪コメ
-            <a class="btn btn-default btn-xs" href="//ode.or.jp/market/chart_55.html" target="_chart">
+            <a class="btn btn-default btn-xs" href="/market/chart_50.html" target="_chart">
                 <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>チャート
             </a>
         </li>
@@ -34,7 +34,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <a href="#collapseMember" data-toggle="collapse" data-parent="#accordion">商品先物業者_リスト</a>
+        <a href="#collapseMember" data-toggle="collapse" data-parent="#accordion">商品先物業者</a>
     </div>
     <div id="collapseMember" class="list-group panel-body collapse">
         <a class="list-group-item" href="http://www.as-tem.com/" target="_member">株式会社アステム<span class="glyphicon glyphicon-globe" aria-hidden="true"></span></a>
@@ -49,39 +49,6 @@
         <a class="list-group-item" href="http://www.dai-ichi.co.jp/" target="_member">第一商品株式会社<span class="glyphicon glyphicon-globe" aria-hidden="true"></span></a>
         <a class="list-group-item" href="http://www.unicom.co.jp/" target="_member">日本ユニコム株式会社<span class="glyphicon glyphicon-globe" aria-hidden="true"></span></a>
         <a class="list-group-item" href="http://www.yutaka-shoji.co.jp/" target="_member">豊商事株式会社<span class="glyphicon glyphicon-globe" aria-hidden="true"></span></a>
-    </div>
-</div>
-
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <a href="#collapseMemberT" data-toggle="collapse" data-parent="#accordion" >商品先物業者_テーブル</a>
-    </div>
-
-    <div id="collapseMemberT" class="panel-collapse panel-body collapse" aria-expanded="false">
-        <div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
-            <a href="http://www.as-tem.com/" target="_member" class="btn btn-default" role="button">株式会社アステム</a>
-            <a href="http://www.okayasu-shoji.co.jp/" target="_member" class="btn btn-default" role="button">岡安商事株式会社</a>
-        </div>
-        <div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
-            <a href="http://www.alphix.co.jp/" target="_member"  class="btn btn-default" role="button">株式会社アルフィックス</a>
-            <a href="http://www.comtex.co.jp/" target="_member" class="btn btn-default" role="button">株式会社コムテックス</a>
-        </div>
-        <div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
-            <a href="http://www.imamura.jp/" target="_member" class="btn btn-default" role="button">今村証券株式会社</a>
-            <a href="http://www.sunward-t.co.jp/" target="_member" class="btn btn-default" role="button">サンワード貿易株式会社</a>
-        </div>
-        <div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
-            <a href="http://www.evojapan.com/" target="_member" class="btn btn-default" role="button">EVOLUTION JAPAN株式会社</a>
-            <a href="http://www.dai-ichi.co.jp/" target="_member" class="btn btn-default" role="button">第一商品株式会社</a>
-        </div>
-        <div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
-            <a href="http://www.okachi.co.jp" target="_member" class="btn btn-default" role="button">岡地株式会社</a>
-            <a href="http://www.unicom.co.jp/" target="_member" class="btn btn-default" role="button">日本ユニコム株式会社</a>
-        </div>
-        <div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
-            <a href="http://www.okato.co.jp/" target="_member" class="btn btn-default" role="button">岡藤商事株式会社</a>
-            <a href="http://www.yutaka-shoji.co.jp/" target="_member" class="btn btn-default" role="button">豊商事株式会社</a>
-        </div>
     </div>
 </div>
 
